--- a/DDAYGO/ViewController/My/Lottery/LotteryHomePage/LotteryController.xib
+++ b/DDAYGO/ViewController/My/Lottery/LotteryHomePage/LotteryController.xib
@@ -11,6 +11,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LotteryController">
             <connections>
+                <outlet property="bottomCV" destination="mTW-gO-ax3" id="pas-Af-elR"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -19,23 +20,21 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Rce-P4-EWN">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="mTW-gO-ax3">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="zt2-WY-dXz">
-                        <size key="itemSize" width="50" height="50"/>
-                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                    </collectionViewFlowLayout>
-                </collectionView>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="Dx8-3a-0K8"/>
+                        <outlet property="delegate" destination="-1" id="oNX-3P-VbG"/>
+                    </connections>
+                </tableView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="Rce-P4-EWN" secondAttribute="bottom" id="IrY-os-3px"/>
-                <constraint firstItem="Rce-P4-EWN" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="XXR-ls-UdY"/>
-                <constraint firstItem="Rce-P4-EWN" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="rrX-6N-z2Q"/>
-                <constraint firstAttribute="trailing" secondItem="Rce-P4-EWN" secondAttribute="trailing" id="rw4-Fz-7xI"/>
+                <constraint firstAttribute="bottom" secondItem="mTW-gO-ax3" secondAttribute="bottom" id="HWz-w1-XgR"/>
+                <constraint firstAttribute="trailing" secondItem="mTW-gO-ax3" secondAttribute="trailing" id="OxE-Qp-3j3"/>
+                <constraint firstItem="mTW-gO-ax3" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="b16-Q7-7yY"/>
+                <constraint firstItem="mTW-gO-ax3" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="g7V-pk-USK"/>
             </constraints>
             <point key="canvasLocation" x="33.5" y="54.5"/>
         </view>
