--- a/DDAYGO/ViewController/My/Lottery/ZP_LotteryBet/BetHeaderCell/BetHeaderView.xib
+++ b/DDAYGO/ViewController/My/Lottery/ZP_LotteryBet/BetHeaderCell/BetHeaderView.xib
@@ -52,7 +52,7 @@
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
-            <color key="backgroundColor" red="0.0" green="0.56284224989999998" blue="0.31881666180000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="bottom" secondItem="6oP-G7-q8l" secondAttribute="bottom" id="8HH-Ba-zsx"/>
                 <constraint firstAttribute="bottom" secondItem="s7i-n1-JcK" secondAttribute="bottom" id="90i-QZ-2hD"/>
